# Health-Wellness-Planner-Agent

./: README.md  pyproject.toml
src/health_agent/: __init__.py  context.py  guardrails.py  main.py  multi_agent.py
src/health_agent/agent/: escalation_agent.py  injury_support_agent.py  nutrition_expert_agent.py
src/health_agent/prompts/: health_prompts.py
src/health_agent/tools/: goal_analyzer.py  meal_planner.py  scheduler.py  tracker.py  workout_recommender.py
src/health_agent/utils/: model_config.py
